# mkdocs-command-generator

./: README.md  pyproject.toml
command_generator/: plugin.py
command_generator/css/: command_generator.css
command_generator/js/: command_generator.js
